<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ObViz App Comparison</string>
    <string name="search_button_name">Search</string>
    <string name="logo_title">ObViz</string>
    <string name="main_menu_home">Home</string>
    <string name="search_hint">Search for an app…</string>

    <string name="title_activity_discover_apps">Best and worst</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="image_description">Image</string>
    <string name="action_compare">Compare</string>
    <string name="list_empty">No items</string>
    <string name="loading">Data is loading. ObVee is working hard.</string>
    <string name="spinner">Topics</string>
    <string name="action_install">Install</string>
    <string name="go_to">See more</string>
    <string name="action_clear">Clear History</string>
    <string name="action_spinner_app">Choose app</string>

    <!-- Activities' title -->
    <string name="title_activity_search">Results</string>
    <string name="title_activity_details">Application</string>
    <string name="title_activity_reviews">Reviews</string>
    <string name="title_activity_comparison">Comparison</string>
    <string name="title_activity_reviews_comparison">Comparison reviews</string>
    <string name="title_activity_package">My Apps</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Toast messages -->
    <string name="app_not_found">App not found</string>
    <string name="list_error">Check your internet connection</string>

    <string name="action_favorite">Add Favorite</string>
    <string name="favorite_inserted">You have a new favorite app!</string>
    <string name="favorite_failed_insertion">Something goes wrong :(</string>
    <string name="action_remove_favorite">Remove from favorite</string>
    <string name="favorite_removed">Successfully removed the favorite</string>
    <string name="internet_error">Please check your internet connection.</string>

    <!-- Titles -->
    <string name="rating_title">Rating</string>
    <string name="date_title">Publication date</string>

    <!-- Preferences -->
    <string name="pref_notifications_title">Notifications</string>
    <string name="pref_notifs_enable_summary">Enable or disable the notifications</string>
    <string name="pref_notifs_enable_title">Enable</string>
    <string name="pref_key_notifs_enable">PREF_KEY_NOTIFS_ENABLE</string>
    <string name="pref_tutorial_title">Tutorial</string>
    <string name="pref_key_tutorial_enable">PREF_KEY_TUTORIAL_ENABLE</string>
    <string name="pref_tutorial_enable_summary">Enable or disable the tutorial when you enter an activity for the first time</string>
    <string name="pref_tutorial_enable_title">Enable</string>
    <string name="pref_key_tutorial_refresh">PREF_KEY_TUTORIAL_REFRESH</string>
    <string name="pref_tutorial_refresh_summary"> Click here if you want to watch the tutorials again.</string>
    <string name="pref_tutorial_refresh_title">Refresh</string>

    <!-- Tutorial -->
    <string name="tutorial_accept">Got it!</string>
    <string name="tutorial_home_content">Choose a category to browse trending apps</string>

    <string name="tutorial_details_content">
        Compare the apps corresponding to your choice.
    </string>
    <string name="tutorial_opinions">
        Each chart represents the public view about an aspect of the app. Click on them
        to see the relevant reviews.
    </string>

    <string name="tutorial_fullapp_opinions">
        App overviews and review snippets. Click to see more details.
    </string>

    <string name="tutorial_discover_opinions">
        Click to set the aspects you care most about. Get the best apps for you.
    </string>



    <string name="tutorial_favorite">
        Add an app to your favorites, and you\'ll have them listed
        here !
    </string>
    <string name="tutorial_headline_1">
        Enter some keywords and look for applications on the Google Play Store
    </string>
    <string name="tutorial_headline_2">
        Explore the opinions of the crowd about topics
    </string>

    <!-- Resources -->
    <string name="category_image_link">
        http://ns3369837.ip-37-187-91.eu/assets/images/icons/colored/
    </string>
    <string name="pref_tutorial_cache">Cache</string>
    <string name="pref_key_cache_empty">PREF_KEY_CACHE_EMPTY</string>
    <string name="pref_cache_summary">Empty the cache</string>
    <string name="pref_cache_empty_title">Clear</string>

</resources>
