<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_notifications_title"
        android:key="pref_key_notifs">

        <CheckBoxPreference
            android:key="@string/pref_key_notifs_enable"
            android:summary="@string/pref_notifs_enable_summary"
            android:title="@string/pref_notifs_enable_title"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_tutorial_title"
        android:key="pref_key_tutorial">

        <CheckBoxPreference
            android:key="@string/pref_key_tutorial_enable"
            android:summary="@string/pref_tutorial_enable_summary"
            android:title="@string/pref_tutorial_enable_title"
            android:defaultValue="true" />

        <Preference
            android:key="@string/pref_key_tutorial_refresh"
            android:summary="@string/pref_tutorial_refresh_summary"
            android:title="@string/pref_tutorial_refresh_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_tutorial_cache"
        android:key="pref_key_cache">

        <Preference
            android:key="@string/pref_key_cache_empty"
            android:summary="@string/pref_cache_summary"
            android:title="@string/pref_cache_empty_title" />

    </PreferenceCategory>

</PreferenceScreen>