<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.obviz.review.DetailsActivity">

    <item
        android:id="@+id/action_favorite"
        android:title="@string/action_favorite"
        android:icon="@drawable/ic_favorite_white_36dp"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_remove_favorite"
        android:title="@string/action_remove_favorite"
        android:icon="@drawable/ic_favorite_red_36dp"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_install"
        android:title="@string/action_install"
        android:icon="@drawable/ic_get_app_white_36dp"
        android:enabled="false"
        app:showAsAction="ifRoom|withText" />

</menu>
